--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <p class="name"></p>
     <p class="blog"></p>
+    <!-- Se crea elemento con class location -->
+    <p class="location"></p>
 
   <!-- <script src="../assets/js/app.js"></script>  Corrección de ruta de script--> 
   <script src="./assets/js/app.js"></script>
